{
    "name": "MainGameActions",
    "maps": [
        {
            "name": "Main",
            "id": "7477083d-f12e-438e-81a2-fa71f061af1c",
            "actions": [
                {
                    "name": "Lane0",
                    "type": "Button",
                    "id": "857a0a8d-6d5d-45ad-b394-a5d0a46ead96",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Lane1",
                    "type": "Button",
                    "id": "36a04e8d-96fd-4a78-876d-c5763609f26f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Lane2",
                    "type": "Button",
                    "id": "1e52fe97-56b0-4f7f-81b3-88e23ea8d001",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Lane3",
                    "type": "Button",
                    "id": "bddd36c7-aebd-47b5-b173-961fa3dae005",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "69cae1d0-5462-498e-8a81-be930cf93ab1",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Lane0",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e0b77ebf-1eb6-45f3-847d-fed057bee0cd",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Lane1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b3dc832f-8cd1-419b-b30e-2197107594cb",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Lane2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6cecfe32-e01d-4e37-a0b2-71930aba6d7b",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Lane3",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}